--- a/app/views/users/welcome.html.erb
+++ b/app/views/users/welcome.html.erb
@@ -1,4 +1,5 @@
-<h2> Log My Run </h2>
+<h2> Welcome to Log My Run App</h2>
 <h3> Log all of your running workouts </h3>
 
-<!-- <h3> <%= link_to "View Users' Profiles", "/users" %> </h3> -->
+
+<h3> <%= link_to "View Users' Profiles", "/users" %> </h3>
