--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,26 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
+  <div class = "top_header">
+    <h1> Running Log Journal </h1>
+  </div>
+
+  <div class = "log_bar">
+      <% if current_user %>
+          Signed in as <%= current_user.user_name %> | <%= link_to "logout", "/logout" %>
+      <% else %>
+        <%= link_to "Login", "/login" %> | <%= link_to "Sign Up", new_user_path%>
+      <% end %>
+  </div>
+
+  <div class = "main_content" >
+
 
 <%= yield %>
+
+</div>
 
 </body>
 </html>
