--- a/app/views/runs/new.html.erb
+++ b/app/views/runs/new.html.erb
@@ -1,6 +1,6 @@
 <h3> Log details of your Run Workout </h3>
 
-<%= form_for @run, url: "/runs"  do |f| %>
+<%= form_for @run do |f| %>
 
 <p> <%= f.label :date       %><br> <%= f.text_field :date %> </p>
 <p> <%= f.label :distance   %><br> <%= f.text_field :distance %> </p>
@@ -14,3 +14,5 @@
 <%= f.submit "Submit New Run Workout Details" %>
 
 <% end %>
+
+<%= link_to 'Reset Form', @user%>
