--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,10 +9,10 @@
 </div>
 
 <h3> Your Log of Runs before 'render partial'</h3>
+<p> <strong> <%= link_to "Post New Run", new_user_run_path(@user) %> </strong> </p>
 
 <!-- <%= render partial: 'users/run', collection: @user.runs %> -->
 
-<p> Here is the section </p>
 
 <table style = "width:100%">
     <tr>
@@ -39,7 +39,7 @@
 
 <%= link_to 'Edit User Profile', edit_user_path(@user) %> ||
 <%= link_to 'Back to Users Index', users_path %> ||
-<%= link_to 'Delete', user_path(@user),
+<%= link_to 'Delete User Profile', user_path(@user),
     method: :delete,
     data: { confirm: 'Are you sure you want to delete your Profile? Delete is permanent.  Please confirm.'} %> ||
 <%= link_to "Post New Run", new_user_run_path(@user) %>
