Edited runs/new.html.erb => added link to Reset Form.  User can reset (erase) form before submitting it.

--- a/app/views/runs/new.html.erb
+++ b/app/views/runs/new.html.erb
@@ -14,5 +14,5 @@
 <%= f.submit "Submit New Run Workout Details" %>
 
 <% end %>
-
-<%= link_to 'See User Profile', user_path(@user)%>
+<%= link_to "Reset Form", new_user_run_path(@user) %>||
+ <%= link_to 'See User Profile', user_path(@user)%>
