Edited Runs Controller & runs/index.html.erb => once a User sees his profile, a list of Runs is displayed, the link to View Rund Details working and taking User to a page which displays all the details of that specific run.

--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -1,5 +1,5 @@
 <div class = 'navigation_bar'>
   <%= link_to "Home Page", root_path %> ||
   <%= link_to "User Profiles", users_path %> ||
-  <%= link_to "Post New Run", new_run_path %> }}
+  <%= link_to "Post New Run", new_run_path %> 
 </div>
