--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,71 @@
  *= require_tree .
  *= require_self
  */
+.top_header {
+   background-color: rgb(30,83,232);
+   border: 2px solid black;
+ }
+
+.user_profile {
+  background-color: yellow;
+  border: 1 px solid black;
+  }
+
+.top_header {
+  background-color: rgb(30,83,232);
+  border: 2px solid black;
+}
+
+.main_content {
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+.log_bar {
+  margin: 15px auto;
+  text-align: center;
+  display: block;
+}
+
+.user_profile {
+  border: 1px solid black;
+  position: relative;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  margin-left: 25px;
+  margin-right: 25px;
+  background-color: rgb(115,125,245);
+}
+
+.runs {
+  border: 1px solid black;
+  position: relative;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  margin-left: 25px;
+  margin-right: 25px;
+  background-color: rgb(140,150,220);
+}
+
+.run_profile {
+  border: 1px solid black;
+  position: relative;
+  padding-left: 25px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  margin-left: 25px;
+  margin-right: 25px;
+  text-align: left;
+  /*background-color: rgb(140,150,220);*/
+}
+
+.navigation_bar {
+  margin: 20px 25px 20px 25px;
+  padding: 20px 0px 20px 0px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+}
+
+h1 {
+  text-align: center;
+}
