--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,20 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
 .top_header {
-   background-color: rgb(30,83,232);
-   border: 2px solid black;
+   background-color: rgb(140,150,220);
+   margin: 10px 25px 10px 25px;
+   border: 1px solid black;
+   text-align: center;
  }
-
-.user_profile {
-  background-color: yellow;
-  border: 1 px solid black;
-  }
-
-.top_header {
-  background-color: rgb(30,83,232);
-  border: 2px solid black;
-}
 
 .main_content {
   text-align: center;
@@ -42,20 +35,14 @@
 .user_profile {
   border: 1px solid black;
   position: relative;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  margin-left: 25px;
-  margin-right: 25px;
-  background-color: rgb(115,125,245);
+  margin: 25px 25px 25px 25px;
+  background-color: rgb(140,150,220);
 }
 
 .runs {
   border: 1px solid black;
   position: relative;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  margin-left: 25px;
-  margin-right: 25px;
+  margin: 25px 25px 25px 25px;
   background-color: rgb(140,150,220);
 }
 
@@ -63,10 +50,7 @@
   border: 1px solid black;
   position: relative;
   padding-left: 25px;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  margin-left: 25px;
-  margin-right: 25px;
+  margin: 25px 25px 25px 25px;
   text-align: left;
   /*background-color: rgb(140,150,220);*/
 }
